# ons-python-template-simple

./: .gitignore  Makefile  README.md  copier.yml  pyproject.toml  template.yaml
.github/workflows/: ci.yml  rename-project.yml  security-scan.yml
docs/: index.md
project_template/: ${{ 'PIRR.md' if not values.is_public_repo }}.njk  ${{ 'pyproject.toml' if values.package_manager == 'poetry' }}.njk  .gitignore  .gitignore.jinja  .pre-commit-config.yaml  Makefile.jinja  Makefile.njk  README.md.jinja  README.md.njk  catalog-info.yaml.njk  {% if not_pipenv_copier %}Pipfile.lock{% endif %}.jinja  {% if not_pipenv_copier %}Pipfile{% endif %}.jinja  {% if not_poetry_copier %}poetry.lock{% endif %}.jinja  {% if not_poetry_copier %}pyproject.toml{% endif %}.jinja  {% if pipenv_copier %}Pipfile.lock{% endif %}.jinja  {% if pipenv_copier %}Pipfile{% endif %}.jinja  {% if poetry_copier %}poetry.lock{% endif %}.jinja  {% if poetry_copier %}pyproject.toml{% endif %}.jinja
project_template/.github/: CODEOWNERS.njk  dependabot.yml.njk  ruff-fix.yml.example.jinja  security-scan-fix.yml.example.jinja  security-scan.yml.example
project_template/.github/linters/: .markdown-link-check.json.njk
project_template/.github/workflows/: ${{ 'codeql.yml' if values.is_public_repo }}.njk  ci.yml.jinja  ci.yml.njk  security-scan.yml.jinja  security-scan.yml.njk
project_template/copier_scripts/: helpers.sh  linter-configs.toml
project_template/docs/: index.md.njk
project_template/tests/unit/: conftest.py.njk
scripts/package_manager_helper/: pyproject.toml  update_template_packages.sh
